[tool.poetry]
name = "aws-cloudformation-provision-instance"
version = "0.1.0"
description = "CloudFormation template and helper scripts to create and provision an AWS EC2 instance with a configured Python project."
authors = ["Guillaume Bournique"]

[tool.poetry.dependencies]
python = "^3.9"
awscli = "^1.18.170"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
